--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,10 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Home"
+  - title: "About Me"
     url: "/"
   - title: "Publications"
     url: "/publications/"
-  - title: "Projects"
-    url: "/projects/"
-  - title: "Contact"
-    url: "/contact/"
+  - title: "CV"
+    url: "/cv/"
+
