--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,10 @@
 
 main:
   - title: "About Me"
-    url: "/"
+    url: "/about/"
   - title: "Publications"
     url: "/publications/"
   - title: "CV"
     url: "/cv/"
+
 
